--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -79,9 +79,20 @@ transform()
   padding 0 8px
   font-size 16px
 
+.ace-nav li:last-child .icon-caret-down
+  position relative
+  top -10px
+
 .ace-nav .nav-user-photo
   border 0
-  max-width 35px
+  width 35px
+  height 35px
+  background-repeat no-repeat
+  background-size cover
+  background-position 50% 50%
+  display inline-block
+  margin-top 5px
+  border-radius 0
 
 .nav-list > li > a
   padding 8px 10px 10px 16px
@@ -632,6 +643,16 @@ transform()
   .lenta-item-hashtag
     float right
 
+.avatar
+  width 100px
+  height 100px
+  background-repeat no-repeat
+  background-size cover
+  background-position 50% 50%
+  &.short
+    width 40px
+    height 40px
+
 .create-topic-btn
   overflow auto
   a
@@ -733,7 +754,7 @@ transform()
         img
           width 70px
       .nextdoor-name
-          margin-left 90px
+          margin-left 110px
   .nextdoors-amount
     margin 15px 0 0 0
 
@@ -742,6 +763,7 @@ transform()
   .user-body-left
     .logo-container
       position relative
+      width 150px
     .ace-file-input
       position absolute
       top 0
@@ -770,7 +792,10 @@ transform()
         display inline-block
         vertical-align middle //
     img
-      width 150px
+      max-width 150px
+      max-height 150px
+      display block
+      margin 0 auto
   .user-body-right
     margin-left 170px
     .home-map
