--- a/vonline_be/war/css/profile.css
+++ b/vonline_be/war/css/profile.css
@@ -58,6 +58,7 @@
 .user-descr .text-area .user-body span {
   width: 170px;
   display: inline-block;
+  max-height: 150px;
 }
 .user-descr .text-area .user-body .user-addresses {
   padding-bottom: 30px;
