--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -45,6 +45,7 @@
       span
         width 170px
         display inline-block
+        max-height 150px
       .user-addresses
         padding-bottom 30px
         span
