--- a/vonline_be/war/partials/nextdoors.html
+++ b/vonline_be/war/partials/nextdoors.html
@@ -15,7 +15,8 @@
         <div class="nextdoor-single" ng-repeat="neighboor in nextdoors.neighboors">
             <a ui-sref="profile({ userId : neighboor.id})" class="nextdoor-left pull-left">
             <span class="nextdoor-ava pull-left">
-                <img src="{{neighboor.avatar}}" alt="аватарка"/>
+                <div class="avatar" style="background-image: url({{neighboor.avatar}})"></div>
+                <!--<img src="{{neighboor.avatar}}" alt="аватарка"/>-->
             </span>
                 <span class="nextdoor-name">{{neighboor.firstName+" "+neighboor.lastName}}</span>
             </a>
