big picures in gallery

--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -625,6 +625,7 @@ h1 {
 .attached a {
   display: inline-block;
   vertical-align: top;
+  margin: 0 5px;
 }
 .attached a img {
   max-width: 300px;
