--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -485,6 +485,9 @@ transform()
 .no-resize
   resize none
 
+.page
+  padding 10px
+
 .message-input
   padding 10px
   margin-bottom 20px
@@ -805,5 +808,9 @@ transform()
         width 100%
         display block
 
-input.ng-invalid.ng-dirty
-  border 1px solid #ff0000
+/* write-message */
+.write-message
+  input
+    margin-bottom 10px
+  .write-message-bottom
+    padding-top 10px
