--- a/vonline_be/war/partials/private-messages.html
+++ b/vonline_be/war/partials/private-messages.html
@@ -1,6 +1,6 @@
 
 <section class="private-messages page"> <!-- ng-show="base.privateMessagesIsActive" -->
-    <a class="btn btn-primary no-border btn-sm pull-right" href="#">Написать сообщение</a>
+    <a class="btn btn-primary no-border btn-sm pull-right" href="write-message">Написать сообщение</a>
     <form method="post" action="#" class="form-group has-info form-search-private">
 <!--
         <span class="block input-icon input-icon-right">
