--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -814,3 +814,11 @@ transform()
     margin-bottom 10px
   .write-message-bottom
     padding-top 10px
+
+.ui-autocomplete
+  list-style none
+  a:hover
+    text-decoration none
+
+.ui-helper-hidden-accessible
+  display none
