--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -954,3 +954,12 @@ h1 {
 .write-message .write-message-bottom {
   padding-top: 10px;
 }
+.ui-autocomplete {
+  list-style: none;
+}
+.ui-autocomplete a:hover {
+  text-decoration: none;
+}
+.ui-helper-hidden-accessible {
+  display: none;
+}
