--- a/vonline_be/war/partials/dialogs.html
+++ b/vonline_be/war/partials/dialogs.html
@@ -1,40 +1,31 @@
 
-<section class="dialog page">
-        <div class="clearfix">
-            <div class="private-message-single">
-                <div class="pull-right">17:00 12 июня 2014</div>
+<section class="private-messages page"> <!-- ng-show="base.privateMessagesIsActive" -->
+    <a class="btn btn-primary no-border btn-sm pull-right" href="write-message">Написать сообщение</a>
+    <form method="post" action="#" class="form-group has-info form-search-private">
+<!--
+        <span class="block input-icon input-icon-right">
+-->
+            <input id="search-private-messages" type="text" class="form-control width-70" value="Поиск" onblur="if(this.value=='') this.value='Поиск';" onfocus="if(this.value=='Поиск') this.value='';"/>
+            <!--<a href="#" class="icon-search icon-on-right bigger-110"></a>-->
+        <!--</span>-->
+    </form>
+    <!--<div class="private-messages">-->
+        <div>
+            <div class="private-message-single" ui-sref="dialog-single-{ {{ dialog.id }} }" ng-repeat="dialog in dialogs.dialogsList">
                 <div class="private-message-left pull-left">
-                    <div class="private-message-ava pull-left"><img src="../../i/avatars/avatar.png" alt="аватарка"/></div>
+                    <div class="private-message-ava pull-left">
+                        <div class="avatar" style="background-image: url({{dialog.users[0].avatar}})"></div>
+                    </div>
                     <div class="private-message-author">
-                        <div><a href="#">Евгений Плющенко</a></div>
-                        <p>Текст сообщения</p>
-
+                        <div><a href="#">{{dialog.users[0].firstName + " "+ dialog.users[0].lastName}}</a></div>
+                        <div>{{dialog.createDate | date}}</div>
                     </div>
                 </div>
-
-            </div>
-            <div class="private-message-single">
-                <div class="pull-right">17:00 12 июня 2014</div>
-                <div class="private-message-left pull-left">
-                    <div class="private-message-ava pull-left"><img src="../../i/avatars/avatar3.png" alt="аватарка"/></div>
-                    <div class="private-message-author">
-                        <div><a href="#">Евгений Плющенко</a></div>
-                        <p>Текст сообщения</p>
-                    </div>
+                <div class="private-message-right">
+                    <!--<p>{{dialogs.content}}</p>-->
                 </div>
             </div>
         </div>
-    <div class="dialog-send">
-        <div class="dialog-send-left pull-left">
-            <img src="../../i/avatars/avatar.png" alt="аватар"/>
-        </div>
-        <div class="dialog-send-right pull-right">
-            <img src="../../i/avatars/avatar3.png" alt="аватар"/>
-        </div>
-        <div class="dialog-send-center">
-            <textarea></textarea>
-            <a class="btn btn-sm btn-primary no-border" href="#">Отправить</a>
-        </div>
-    </div>
+    <!--</div>-->
 
 </section>
