--- a/vonline_be/war/partials/write-message.html
+++ b/vonline_be/war/partials/write-message.html
@@ -10,7 +10,7 @@
     <div id="attach-area-writeMessage" class="attach-area"></div>
 
     <span class="input-group-btn write-message-bottom">
-        <button class="btn btn-sm btn-info no-radius no-border" type="button">
+        <button class="btn btn-sm btn-info no-radius no-border" type="button" ng-click="writeMessage.send()" ui-sref="dialog-single-{ {{ writeMessage.dialogId }} }">
             <i class="icon-share-alt"></i>
             Отправить
         </button>
