--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -810,7 +810,7 @@ transform()
 
 /* write-message */
 .write-message
-  input
+  .select2-container
     margin-bottom 10px
   .write-message-bottom
     padding-top 10px
