--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -521,6 +521,9 @@ transform()
     position relative
     &:hover
       text-decoration none
+  &.attach-area-doc
+    .remove-attach-img
+      margin-left 0
 
 .attach-dropdown
   li a:hover
