--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -512,6 +512,7 @@ transform()
     background-position center center
     background-size contain
     background-repeat no-repeat
+    display block
   .remove-attach-img
     font-size 20px
     color #ff0000
@@ -562,6 +563,7 @@ transform()
     margin 0 5px
     img
       max-width 300px
+      max-height 300px
 
 .create-poll
   margin-bottom 10px
