--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -504,8 +504,9 @@ transform()
 .attach-area
   .attach-item
     display inline-block
-    margin-right 10px
-    margin-top 10px
+    vertical-align top
+    margin-right 1px
+    margin-top 5px
   .attached-img
     width 150px
     height 150px
@@ -562,8 +563,8 @@ transform()
     vertical-align top
     margin 0 5px
     img
-      max-width 300px
-      max-height 300px
+      max-width 150px
+      max-height 150px
 
 .create-poll
   margin-bottom 10px
