--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -774,6 +774,15 @@ transform()
     .logo-container
       position relative
       width 150px
+      .change-avatar-link
+        background rgba(0,0,0,.3)
+        text-align center
+        color #fff
+        display block
+        position relative
+        top -26px
+        &:hover
+          text-decoration none
     .ace-file-input
       position absolute
       top 0
@@ -806,6 +815,10 @@ transform()
       max-height 150px
       display block
       margin 0 auto
+      &.new
+        width 150px
+        height 150px
+        background-position center center
   .user-body-right
     margin-left 170px
     .home-map
@@ -828,3 +841,45 @@ transform()
 
 .ui-helper-hidden-accessible
   display none
+
+/* change-avatar */
+.ui-dialog .ui-dialog-titlebar
+  background #fff
+
+.ui-dialog .ui-dialog-titlebar-close
+  float right
+
+.load-avatar
+  display block
+  margin 0 auto
+  padding 0
+  border-width 0
+  border 0
+  &:active
+  &:focus
+    border 0
+    outline none
+    //background inherit !important
+  .ace-file-input
+  .file-label
+    margin-bottom 0
+  .file-label
+    font-weight normal
+    color #fff
+    background-color inherit
+    margin 0
+    border 0
+    &:before
+      color #fff
+      background-color inherit
+      font-weight normal
+      border 0
+  img
+    max-width 500px
+    max-height 500px
+
+.btn-save-avatar
+  margin 10px 0
+
+.ui-dialog-content
+  text-align center
