--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -81,11 +81,15 @@ h1 {
   margin-top: 5px;
   border-radius: 0;
 }
+.nav-list > li {
+  border: 0;
+}
 .nav-list > li > a {
   padding: 8px 10px 10px 16px;
   height: auto;
   line-height: 20px;
   position: relative;
+  background: none;
 }
 .nav-list > li > a span {
   display: inline-block;
@@ -101,6 +105,18 @@ h1 {
 .nav-list > li.active:hover a {
   font-size: 15px;
 }
+.nav-list > li.active > a,
+.nav-list > li.active:hover a {
+  font-weight: normal;
+}
+.nav-list > li.active > a:before,
+.nav-list > li.active:hover a:before {
+  display: none;
+}
+.nav-list > li:hover a,
+.nav-list > li.active:hover a {
+  background: #f2f2f2;
+}
 .sidebar#sidebar {
   height: 100%;
   left: 0;
@@ -108,6 +124,7 @@ h1 {
   bottom: 0;
   position: absolute;
   z-index: 13;
+  background: none;
 }
 .sidebar#sidebar .show-left {
   display: none;
