--- a/vonline_be/war/partials/neighbours.html
+++ b/vonline_be/war/partials/neighbours.html
@@ -1,8 +1,8 @@
 
-<section class="nextdoors page" ng-class="base.nextdoorsLoadStatus"> <!--  ng-show="base.nextdoorsIsActive" -->
+<section class="nextdoors page" ng-class="base.neighboursLoadStatus"> <!--  ng-show="base.nextdoorsIsActive" -->
 
 <div class="nextdoors">
-    <div class="nextdoors-amount pull-left">Зарегестрировано соседей: <span>{{nextdoors.neighboorsSize}}</span></div>
+    <div class="nextdoors-amount pull-left">Зарегестрировано соседей: <span>{{neighbours.neighboorsSize}}</span></div>
 
 
     <form method="post" action="#" class="form-group has-info form-search">
@@ -12,7 +12,7 @@
         </span>
     </form>
 
-        <div class="nextdoor-single" ng-repeat="neighboor in nextdoors.neighboors">
+        <div class="nextdoor-single" ng-repeat="neighboor in neighbours.neighboors">
             <a ui-sref="profile({ userId : neighboor.id})" class="nextdoor-left pull-left">
             <span class="nextdoor-ava pull-left">
                 <div class="avatar" style="background-image: url({{neighboor.avatar}})"></div>
