--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -78,6 +78,10 @@
                     <div>{{talk.messageNum}} сообщений</div>
                 </div>
                 <div class="talks-title-right">
+                                <span class="label label-lg arrowed lenta-item-hashtag pull-right"
+                                      ng-class="talk.tagColor">{{talk.label}}</span>
+                    <div class="clearfix"></div>
+
                     <div>Последнее обновление:</div>
                     <div>{{talk.lastUpdateEdit}}</div>
                 </div>
