--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -677,6 +677,9 @@ transform()
   &.short
     width 40px
     height 40px
+  &.short2
+    width 48px
+    height 48px
 
 .create-topic-btn
   overflow auto
@@ -754,7 +757,7 @@ transform()
         img
           width 70px
       .private-message-author
-        margin-left 90px
+        margin-left 110px
         a
           &:hover
             text-decoration none
