--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -779,6 +779,10 @@ h1 {
   width: 40px;
   height: 40px;
 }
+.avatar.short2 {
+  width: 48px;
+  height: 48px;
+}
 .create-topic-btn {
   overflow: auto;
 }
@@ -882,7 +886,7 @@ h1 {
 }
 .dialog .private-message-single .private-message-left .private-message-author,
 .private-messages .private-message-single .private-message-left .private-message-author {
-  margin-left: 90px;
+  margin-left: 110px;
 }
 .dialog .private-message-single .private-message-left .private-message-author a:hover,
 .private-messages .private-message-single .private-message-left .private-message-author a:hover {
