--- a/vonline_be/war/partials/write-message.html
+++ b/vonline_be/war/partials/write-message.html
@@ -6,17 +6,18 @@
     </select>
     <!--<input type="text" placeholder="Кому" class="width-100 write-message-to" autocomplete="off" />-->
 
-    <textarea class="width-100 message-textarea no-resize" value="Сообщение"
+    <textarea class="width-100 message-textarea no-resize" value="Сообщение" ng-model="writeMessage.newMessage.text"
               onblur="if(this.value=='') this.value='Сообщение';"
               onfocus="if(this.value=='Сообщение') this.value='';" >Сообщение</textarea>
 
     <div id="attach-area-writeMessage" class="attach-area"></div>
 
     <span class="input-group-btn write-message-bottom">
-        <button class="btn btn-sm btn-info no-radius no-border" type="button" ui-sref="dialog-single({ dialogId : {{writeMessage.dialogId}} })"> <!-- ng-click="writeMessage.send()" ui-sref="dialog-single-{ {{ writeMessage.dialogId }} }" -->
+        <button class="btn btn-sm btn-info no-radius no-border" type="button" ng-click="writeMessage.send()" > <!-- ui-sref="dialog-single({ dialogId : {{writeMessage.dialogId}} })" -->
             <i class="icon-share-alt"></i>
             Отправить
         </button>
+        <span class="writeMessage-error error-info" ng-show="writeMessage.isError">{{writeMessage.errorText}}</span>
 
         <div class="btn-group attach-dropdown pull-right">
             <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border" data-producerid="0">
