--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -511,10 +511,12 @@ transform()
     width 100%
     height 90px
     overflow hidden
-  .hashtag
-    margin-left 10px
   .message-input-bottom
     margin-top 15px
+
+.hashtag
+  margin-left 10px
+  margin-right 10px
 
 .attach-area
   .attach-item
