--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -46,6 +46,7 @@
                             </ul>
                         </div>
                     </div>
+                    <span class="error-info" ng-show="talks.isCreateTalkError">{{talks.createTalkErrorText}}</span>
 
 
                     <div class="btn-group attach-dropdown pull-right">
