--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -48,6 +48,8 @@
                         </div>
                     </div>
 
+                    <span class="error-info" ng-show="lenta.isCreateMessageError">{{lenta.createMessageErrorText}}</span>
+
                 </div>
 
             </div>
@@ -172,6 +174,7 @@
                                         <i class="icon-share-alt"></i>
                                         Отправить
                                     </button>
+                                    <span class="error-info" ng-show="wallItem.isCreateCommentError">{{wallItem.createCommentErrorText}}</span>
 
                                     <div class="btn-group attach-dropdown pull-right">
                                         <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border" data-producerid="0">
