--- a/vonline_be/war/partials/talks-single.html
+++ b/vonline_be/war/partials/talks-single.html
@@ -102,6 +102,7 @@
                                     </div>
 
                                     <a class="btn btn-sm no-border btn-primary" href="#" ng-click="talks.addSingleFirstMessage($event,talks.fullTalkTopic.id)">Отправить</a>
+                                    <span class="error-info" ng-show="talks.isCreateFirstMessageError">{{talks.createFirstMessageErrorText}}</span>
                                 </div>
 
                             </div>
@@ -160,6 +161,7 @@
                                             </div>
 
                                             <a class="btn btn-sm no-border btn-primary" href="#" ng-click="talks.addSingleMessage($event,talks.fullTalkTopic.id,firstMessage)">Отправить</a>
+                                            <span class="error-info" ng-show="talks.isCreateMessageToFirstError">{{talks.createMessageToFirstErrorText}}</span>
                                         </div>
 
                                     </div>
@@ -219,6 +221,7 @@
                                                     </div>
 
                                                     <a class="btn btn-sm no-border btn-primary" href="#" ng-click="talks.addSingleMessage($event,talks.fullTalkTopic.id,firstMessage,message)">Отправить</a>
+                                                    <span class="error-info" ng-show="talks.isCreateMessageError">{{talks.createMessageErrorText}}</span>
                                                 </div>
 
                                             </div>
