--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -739,7 +739,8 @@ transform()
     textarea
       display block
       width 100%
-      margin-bottom 10px
+    .dialog-send-bottom
+      margin-top 10px
 
 .dialog
 .private-messages
@@ -765,6 +766,10 @@ transform()
             text-decoration none
     .private-message-right
       margin-left 320px
+
+.dialog
+  .private-message-single
+    cursor default
 
     /* nextdoors */
 .nextdoors
